# phonon-mpv

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING.LIB  README.md
cmake/: FindPhonon.cmake
src/: .gitignore  CMakeLists.txt  backend.cpp  backend.h  effect.cpp  effect.h  effectmanager.cpp  effectmanager.h  mediacontroller.cpp  mediacontroller.h  mediaobject.cpp  mediaobject.h  phonon-mpv.json.in  sinknode.cpp  sinknode.h
src/audio/: audiodataoutput.cpp  audiodataoutput.h  audiooutput.cpp  audiooutput.h  volumefadereffect.cpp  volumefadereffect.h
src/utils/: debug.cpp  debug.h  debug_p.h
src/video/: videowidget.cpp  videowidget.h
